Address code review feedback: remove redundant checks and improve compatibility
Co-authored-by: kubota6646 <240894337+kubota6646@users.noreply.github.com>